第二次修改
1.修改css font-family 位置
2. 修改headTitle about 結構， h2 和 img 獨立出來
3. headTitle 刪除padding-top: 100px;
4. brand 的 p 加上白色

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,10 @@ table {
 
 *, *:before, *:after{
   box-sizing: border-box;
-  font-family: "Roboto","微軟正黑體", sans-serif;
+}
+
+body,html{
+  font-family: "Microsoft JhengHei", "Helvetica Neue", Arial, sans-serif;
 }
 
 .container {
@@ -60,7 +63,7 @@ table {
 img{
   display: block;
 }
-.header, .about{
+.header{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -69,9 +72,6 @@ img{
   background: url(../images/banner.png) no-repeat center;
   width: 100%;
   height: 960px;
-}
-.headTitle{
-  padding-top: 100px;
 }
 .headTitle-sm, .aboutText, .aboutText-sm{
   font-size: 24px;
@@ -122,11 +122,17 @@ img{
   margin-bottom: 40px;
 }
 .about img{
-  margin-bottom: 24px;
+  margin: 0 auto 24px;
+}
+.aboutMain{
+  width: 384px;
+  margin: 0 auto;
+  border-top: 1px solid #000;
+  padding-top: 32px;
 }
 .aboutText-sm{
   line-height: 36px;
-  margin-bottom: 66px;
+  margin-bottom: 24px;
   position: relative;
 }
 .about li {
@@ -139,6 +145,9 @@ img{
   font-style: italic;
   position: relative;
 }
+.brand-text-md{
+  color: #fff;
+}
 .aboutText-md:before{
   content: "";
   position: absolute;
@@ -148,15 +157,6 @@ img{
   border-radius: 50%;
   left: -38px;
   margin: 11px 0px;
-}
-.aboutText-sm:after{
-  content: "";
-  position: absolute;
-  bottom: -32px;
-  left: 0;
-  width: 384px;
-  height: 1px;
-  background: #000;
 }
 .brand{
   background: #000;
