--- a/css/style.css
+++ b/css/style.css
@@ -124,16 +124,16 @@ img{
 .about img{
   margin: 0 auto 24px;
 }
-.aboutMain{
-  width: 384px;
-  margin: 0 auto;
-  border-top: 1px solid #000;
-  padding-top: 32px;
-}
 .aboutText-sm{
   line-height: 36px;
   margin-bottom: 24px;
   position: relative;
+}
+.aboutLine{
+  width: 384px;
+  height: 1px;
+  background-color: #000;
+  margin: 0 auto 32px;
 }
 .about li {
   position: relative;
